# rust-lambda-stream

./: .gitignore  README.md  package.json  pnpm-lock.yaml
lambda/: Cargo.toml
lambda_response_stream/: Cargo.toml
lambda_response_stream/src/: main.rs
lambda_websocket/: Cargo.toml  Dockerfile
lambda_websocket/src/: main.rs
src/: App.css  App.tsx  index.css
terraform/: .terraform.lock.hcl  backend.tf  main.tf  providers.tf  variables.tf
terraform/modules/acm/: acm.tf  outputs.tf  providers.tf  variables.tf
terraform/modules/apigateway/ws/: domain.tf  main.tf  variables.tf
terraform/modules/lambda/: function.tf  outputs.tf  repository.tf  role.tf  url.tf  variables.tf
